# ChessTRM

./: README.md  SPEC.md  TASKS.md  pyproject.toml  ruff_errors.txt
.devcontainer/: devcontainer.json
src/chesstrm/: inference.py  main.py
src/chesstrm/data/: dataset.py  fen_to_tensor.py  mapping.py
src/chesstrm/model/: layers.py  transformer.py  trm.py
src/chesstrm/tests/: test_dataset.py  test_fen_to_tensor.py  test_inference.py  test_layers.py  test_loss.py  test_mapping.py  test_trainer.py  test_transformer.py  test_trm.py
src/chesstrm/training/: loss.py  trainer.py
src/chesstrm/utils/: inspect_h5.py
